NetBSD Problem Report #51060

From martin@duskware.de  Sun Apr 10 19:04:09 2016
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D74E27A221
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 10 Apr 2016 19:04:09 +0000 (UTC)
Date: Sun, 10 Apr 2016 21:04:06 CEST
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: rw lock enter panic
X-Send-Pr-Version: 3.95

>Number:         51060
>Category:       kern
>Synopsis:       rw lock enter panic
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    ozaki-r
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 10 19:05:00 +0000 2016
>Closed-Date:    Wed May 25 06:46:10 +0000 2016
>Last-Modified:  Wed May 25 06:46:10 +0000 2016
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.27
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD night-owl.duskware.de 7.99.27 NetBSD 7.99.27 (NIGHT-OWL) #406: Sun Apr 10 10:28:15 CEST 2016 martin@night-owl.duskware.de:/usr/src/sys/arch/amd64/compile/NIGHT-OWL amd64
Architecture: x86_64
Machine: amd64
>Description:

Crash while surfing the internet, sysctl -w net.inet6.ip6.dad_count=0

#11 0xffffffff806f1156 in lockdebug_abort (lock=0xfffffe808a24cc08, 
    ops=ops@entry=0xffffffff80fc1fb0 <rwlock_lockops>, 
    func=func@entry=0xffffffff80bd2ec0 <__func__.6032> "rw_vector_enter", 
    msg=msg@entry=0xffffffff80cd30fd "locking against myself")
    at ../../../../kern/subr_lockdebug.c:867
#12 0xffffffff806ca1b8 in rw_abort (rw=rw@entry=0xfffffe808a24cc08, 
    func=func@entry=0xffffffff80bd2ec0 <__func__.6032> "rw_vector_enter", 
    msg=msg@entry=0xffffffff80cd30fd "locking against myself")
    at ../../../../kern/kern_rwlock.c:192
#13 0xffffffff806ca68b in rw_vector_enter (rw=0xfffffe808a24cc08, op=RW_READER)
    at ../../../../kern/kern_rwlock.c:341
#14 0xffffffff804f3e3d in in6_lltable_lookup (llt=<optimized out>, 
    flags=<optimized out>, l3addr=<optimized out>)
    at ../../../../netinet6/in6.c:2487
#15 0xffffffff8050afb8 in lla_lookup (l3addr=0xfffffe80bf716bac, flags=0, 
    llt=<optimized out>) at ../../../../net/if_llatbl.h:295
#16 nd6_lookup (addr6=<optimized out>, ifp=0xffff800007007d30, 
    wlock=wlock@entry=false) at ../../../../netinet6/nd6.c:864
#17 0xffffffff80510206 in nd6_is_llinfo_probreach (dr=<optimized out>)
    at ../../../../netinet6/nd6_rtr.c:113
#18 find_pfxlist_reachable_router (pr=0xfffffe8134a7b678)
    at ../../../../netinet6/nd6_rtr.c:1384
#19 0xffffffff80510da6 in pfxlist_onlink_check ()
    at ../../../../netinet6/nd6_rtr.c:1417
#20 0xffffffff8050fc2f in nd6_na_input (m=0xfffffe8135b67800, 
    off=off@entry=40, icmp6len=8, icmp6len@entry=32)
    at ../../../../netinet6/nd6_nbr.c:678
#21 0xffffffff804f17b4 in icmp6_input (mp=<optimized out>, 
    offp=0xfffffe80bf716ef0, proto=<optimized out>)
    at ../../../../netinet6/icmp6.c:823
#22 0xffffffff80500a84 in ip6_input (m=0xfffffe80657f9400)
    at ../../../../netinet6/ip6_input.c:754
#23 0xffffffff80500ff5 in ip6intr (arg=<optimized out>)
    at ../../../../netinet6/ip6_input.c:229
#24 0xffffffff806d0244 in softint_execute (l=<optimized out>, s=4, 
    si=0xffff800045e72230) at ../../../../kern/kern_softint.c:589
#25 softint_dispatch (pinned=<optimized out>, s=4)
    at ../../../../kern/kern_softint.c:871


>How-To-Repeat:
no idea yet

>Fix:
n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->ozaki-r
Responsible-Changed-By: ozaki-r@NetBSD.org
Responsible-Changed-When: Mon, 11 Apr 2016 01:02:29 +0000
Responsible-Changed-Why:
mine


State-Changed-From-To: open->feedback
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Mon, 11 Apr 2016 01:18:33 +0000
State-Changed-Why:
A possible fix has been committed. Let me know if the failure still happens.


From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51060 CVS commit: src/sys/netinet6
Date: Mon, 11 Apr 2016 01:16:20 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Apr 11 01:16:20 UTC 2016

 Modified Files:
 	src/sys/netinet6: nd6_nbr.c

 Log Message:
 Don't call pfxlist_onlink_check with holding llentry lock

 From FreeBSD (as of 2016-04-11).

 Should fix PR kern/51060.


 To generate a diff of this commit:
 cvs rdiff -u -r1.115 -r1.116 src/sys/netinet6/nd6_nbr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Wed, 25 May 2016 06:46:10 +0000
State-Changed-Why:
No recurrence over one month should be ok to close.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.